--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                                         <div class="col-md-6">
                                             <div class="story-box">
                                                 <div class="story-text">
-                                                    <h3>Lorem ipsum dolor</h3>
+                                                    <h3>current</h3>
                                                     <p>
                                                         And as we look toward the future, our vision is simple: to keep growing without ever losing that personal, down-to-earth touch that got us here. </p>
                                                 </div>
@@ -164,7 +164,7 @@
                                         <div class="col-md-6">
                                             <div class="story-box">
                                                 <div class="story-text">
-                                                    <h3>Lorem ipsum dolor</h3>
+                                                    <h3>Big project</h3>
                                                     <p>
                                                         Our journey is built on trust, consistency, and a passion for making spaces sparkle. Whether it’s a cozy home, a busy office, or a large commercial space, we treat every job with the same level of care and commitment.
 
@@ -196,7 +196,7 @@
                                         <div class="col-md-6">
                                             <div class="story-box">
                                                 <div class="story-text">
-                                                    <h3>Lorem ipsum dolor</h3>
+                                                    <h3>Special project</h3>
                                                     <p>
                                                         As we look ahead, we remain focused on our core values: quality, integrity, and exceptional customer service. We're proud of how far we've come — and even more excited for what’s next. </p>
                                                 </div>
@@ -213,7 +213,7 @@
                                         <div class="col-md-6">
                                             <div class="story-box">
                                                 <div class="story-text">
-                                                    <h3>Lorem ipsum dolor</h3>
+                                                    <h3>Big project</h3>
                                                     <p>
                                                         It wasn’t always easy. There were late nights, early mornings, and the kind of growing pains that come with building something from scratch. But there was also joy — in every 5-star review, in every loyal client who referred a friend, and in every team member who joined the vision and made it stronger.  </p>
                                                 </div>
@@ -243,7 +243,7 @@
                                         <div class="col-md-6">
                                             <div class="story-box">
                                                 <div class="story-text">
-                                                    <h3>Lorem ipsum dolor</h3>
+                                                    <h3>Secound project</h3>
                                                     <p>
                                                         What started with a few loyal clients and word-of-mouth referrals quickly grew into something more. As our reputation for excellence spread, so did our reach. From cleaning homes in our local neighborhood to managing large-scale commercial projects, every step of our growth has been fueled by hard work, trust, and the relationships we've built.  </p>
                                                 </div>
@@ -260,7 +260,7 @@
                                         <div class="col-md-6">
                                             <div class="story-box">
                                                 <div class="story-text">
-                                                    <h3>Lorem ipsum dolor</h3>
+                                                    <h3>First project</h3>
                                                     <p>
                                                         Our journey is built on trust, consistency, and a passion for making spaces sparkle. Whether it’s a cozy home, a busy office, or a large commercial space, we treat every job with the same level of care and commitment.
                                                        </p>
