--- a/service.html
+++ b/service.html
@@ -211,7 +211,7 @@
             
             
             <!-- Pricing Plan Start -->
-            <div class="price">
+             <div class="price">
                 <div class="container">
                     <div class="section-header">
                         <p>Pricing Plan</p>
@@ -228,7 +228,7 @@
                                         <h2>Standard</h2>
                                     </div>
                                     <div class="price-pricing">
-                                        <h2><small>$</small>99</h2>
+                                        <h2><small>Rs</small>99,999</h2>
                                     </div>
                                 </div>
                                 <div class="price-body">
@@ -259,7 +259,7 @@
                                         <h2>Premium</h2>
                                     </div>
                                     <div class="price-pricing">
-                                        <h2><small>$</small>149</h2>
+                                        <h2><small>Rs</small>43,999</h2>
                                     </div>
                                 </div>
                                 <div class="price-body">
@@ -290,7 +290,7 @@
                                         <h2>Enterprise</h2>
                                     </div>
                                     <div class="price-pricing">
-                                        <h2><small>$</small>199</h2>
+                                        <h2><small>Rs</small>58,999</h2>
                                     </div>
                                 </div>
                                 <div class="price-body">
