--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                                         <h2>Standard</h2>
                                     </div>
                                     <div class="price-pricing">
-                                        <h2><small>$</small>99</h2>
+                                        <h2><small>Rs</small>99,999</h2>
                                     </div>
                                 </div>
                                 <div class="price-body">
@@ -442,7 +442,7 @@
                                         <h2>Premium</h2>
                                     </div>
                                     <div class="price-pricing">
-                                        <h2><small>$</small>149</h2>
+                                        <h2><small>Rs</small>43,999</h2>
                                     </div>
                                 </div>
                                 <div class="price-body">
@@ -473,7 +473,7 @@
                                         <h2>Enterprise</h2>
                                     </div>
                                     <div class="price-pricing">
-                                        <h2><small>$</small>199</h2>
+                                        <h2><small>Rs</small>58,999</h2>
                                     </div>
                                 </div>
                                 <div class="price-body">
