--- a/index.html
+++ b/index.html
@@ -689,14 +689,14 @@
                             <div class="footer-form">
                                 <h2>Stay Updated</h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet, adipiscing elit. Etiam accumsan lacus eget velit
+                                    Lmore to contact
                                 </p>
                                 
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="container footer-menu">
+                <!-- <div class="container footer-menu">
                     <div class="f-menu">
                         <a href="">Terms of use</a>
                         <a href="">Privacy policy</a>
@@ -704,12 +704,12 @@
                         <a href="">Help & FQAs</a>
                         <a href="">Contact us</a>
                     </div>
-                </div>
+                </div> -->
                 <div class="container copyright">
                     <div class="row">
-                        <div class="col-md-6">
+                        <!-- <div class="col-md-6">
                             <p>&copy; <a href="#">HTML Codex</a>, All Right Reserved.</p>
-                        </div>
+                        </div> -->
                         <div class="col-md-6">
                             <p>Designed By <a href="#">Webbuilder.lk</a></p>
                         </div>
