--- a/portfolio.html
+++ b/portfolio.html
@@ -308,9 +308,9 @@
                 </div> -->
                 <div class="container copyright">
                     <div class="row">
-                        <!-- <div class="col-md-6">
-                            <p>&copy; <a href="#">HTML Codex</a>, All Right Reserved.</p>
-                        </div> -->
+                        <div class="col-md-6">
+                            <p>&copy; , All Right Reserved.</p>
+                        </div>
                         <div class="col-md-6">
                             <p>Designed By <a href="#">Webbuilder.lk</a></p>
                         </div>
