--- a/index.html
+++ b/index.html
@@ -686,11 +686,12 @@
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3">
-                            <div class="footer-form">
-                                <h2>Stay Updated</h2>
+                             <div class="footer-form">
+                                <h2>Map</h2>
                                 <p>
-                                    Lmore to contact
+                                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3932.9898959887287!2d80.01045857484144!3d9.681902690407863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3afe540941ccc69b%3A0x195a7cb668a2635!2sThaddatheru%20Junction!5e0!3m2!1sen!2slk!4v1750227502800!5m2!1sen!2slk" width="100%" height="100%" style="border:0; border-radius: 15px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </p>
+                            </div>
                                 
                             </div>
                         </div>
@@ -708,7 +709,7 @@
                 <div class="container copyright">
                     <div class="row">
                         <div class="col-md-6">
-                            <p>&copy; , All Right Reserved.</p>
+                            <p> All Right Reserved.</p>
                         </div>
                         <div class="col-md-6">
                             <p>Designed By <a href="#">Webbuilder.lk</a></p>
